# aqaengineer_advanced

./: README.md  pyproject.toml  requirements.txt
api_mailhog/apis/: mailhog_api.py
dm_api_account/apis/: account_api.py  login_api.py
helpers/: account_helper.py
restclient/: client.py
services/: api_mailhog.py  dm_api_account.py
tests/: config.py  test_post_v1_account.py
tests/functional/post_v1_account/: test_post_v1_account.py
tests/functional/post_v1_account_login/: test_post_v1_account_login.py
tests/functional/put_v1_account_email/: test_put_v1_account_email.py
tests/functional/put_v1_account_token/: test_put_v1_account_token.py
tests/utils/: utils.py
